# bruvtext

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _config.yml
.github/workflows/: pages.yml
assets/text/: arabic.txt  czech.txt  dutch.txt  english.txt  french.txt  german.txt  hindi.txt  italian.txt  japanese.txt  korean.txt  polish.txt  portuguese.txt  romanian.txt  simplified_chinese.txt  spanish.txt  swedish.txt  traditional_chinese.txt  turkish.txt  vietnamese.txt
demo/: main.cpp  vulkan_demo.cpp  vulkan_demo.h
demo/shaders/: text.frag  text.vert
docs/: benchmark-plan.md  bug-report-atlas-tolerance-layout-drift.md  docs-polish-plan.md  gpu-renderer-gap.md  index.md  integration-quickstart.md  library-spec.md  performance-notes.md  reference-renderer.md  v1-remaining-scope.md  vendoring.md  vulkan-integration.md
include/bruvtext/: bruvtext.h
pages/: .preview-reload  benchmarking.html  index.html  language-coverage.html  quickstart.html  renderer-contract.html  vendoring.html
pages/assets/: live-reload.js  site.css
scripts/: preview-pages.sh
src/: atlas_cache.cpp  atlas_cache.h  bruvtext.cpp  context.cpp  context.h  draw_list.cpp  draw_list.h  font_registry.cpp  font_registry.h  frame_state.cpp  frame_state.h  shape_cache.cpp  shape_cache.h  shaping.cpp  shaping.h
